Update links for Hvr app and customized text and sizing of broadcast page on livestream./html.

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
 							</a>
-							<p><a href="https://discordapp.com/users/1287308732275101777">OFiDCrypt</a></p>
+							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt</a></p>
 						</section>											
 						<section>
 							<h3>Social</h3>
