--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -138,13 +138,15 @@
 				<header>
 					<h2>𝕏 Livestream: Welcome</h2>
 					<!-- Section Description -->
-					<p class="align-center">⚠️ Contest Not Live: In Development ⚠️</p>
+					<p class="align-center">⚠️ <b>Not Live:</b> Currently in Development ⚠️</p>
 					<p class="align-center">You can see the beta documentation for the contest structure <a
 							href="https://github.com/OFiDCrypt/kin-perk-sweeps/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>.
 					</p>
 					<h2>Event Schedule</h2>
-					<p>We will keep the community informed about upcoming contests and giveaways by posting 
-						and regularly updating an event calendar here.</p>
+					<p>We will keep the community informed about upcoming contests and giveaways here, by posting 
+						and regularly updating an event calendar.</p>
+						<p class="align-center"><a href="https://www.ofidcrypt.ca/livestream-kin-contests-ugomxjp">Learn more</a>
+						</p>
 				</header>
 			</section>
 		</div>
@@ -206,7 +208,7 @@
 						<img src="../assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img"
 							class="custom-site-icon-contact">
 					</a>
-					<p><a href="https://discordapp.com/users/1287308732275101777">OFiDCrypt</a></p>
+					<p><a href="https://www.ofidcrypt.ca">OFiDCrypt</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
