Add dark mode toggle SVG for desktop and adjusted mobile livestream sizing of videa and iframe.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/main.css">
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css"></noscript>
+		<noscript>
+			<link rel="stylesheet" href="/assets/css/noscript.css">
+		</noscript>
 	
 		<!-- JavaScript Libraries -->
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -99,7 +101,7 @@
 						</ul>
 					</div>
 
-				<!-- Header -->
+					<!-- Header -->
 					<header id="header">
 							<div class="logo">
 								<img src="assets/images/logo01.png" alt="OFiDCrypt Transparent Logo" />
@@ -111,7 +113,7 @@
 						<i class="fas fa-sun"></i>
 					</a>
 					
-				<!-- Nav -->
+					<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Learn</a></li>
@@ -122,6 +124,11 @@
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
+							<li>
+								<a href="#" aria-label="Dark-Light Desktop Toggle Button">
+								  <img src="/assets/images/darklight-toggle01.svg" alt="Dark-Light Desktop Toggle Button" class="custom-site-icon">
+								</a>
+							</li>
 							<li>
 								<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 								  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
