Added event calendar to livestream.html and mobile formatting.

--- a/community.html
+++ b/community.html
@@ -161,7 +161,7 @@
 							</tr>
 							<tr>
 								<td>Follow on 𝕏</td>
-								<td><a href="https://x.com/Kin_Ecosystem">Kin_Ecosystem</a></td>
+								<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
 							</tr>
 							<tr>
 								<td>Community Website</td>
