Text typo fix on livestream.html

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -167,19 +167,19 @@
 									<td>ID: PDA-001 <br><b>Perk Digital Art</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Live Draw: <br><a href="#">2024-Nov-TBA at 00:00</a></td>
+									<td>Live Draw: <br><a href="#">2024-TBA at 00:00</a></td>
 								</tr>
 								<tr>
 									<td>ID: PDA-002 <br><b>Perk Digital Art</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Live Draw: <br><a href="#">2024-Nov-TBA at 00:00</a></td>
+									<td>Live Draw: <br><a href="#">2024-TBA at 00:00</a></td>
 								</tr>
 								<tr>
 									<td>ID: PDA-003 <br><b>Perk Digital Art</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Live Draw: <br><a href="#">2024-Nov-TBA at 00:00</a></td>
+									<td>Live Draw: <br><a href="#">2024-TBA at 00:00</a></td>
 								</tr>
 							</tbody>
 						</table>
