--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -39,6 +39,7 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="../favicon.ico">
+	<link rel="canonical" href="https://www.ofidcrypt.com/pages/livestream.html">
 
 	<!-- Specific PNG sizes for modern browsers -->
 	<link rel="icon" type="image/png" sizes="512x512" href="../favicon.png">
