--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="canonical" href="https://www.ofidcrypt.com">
 		
 		<!-- Specific PNG sizes for modern browsers -->
 		<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
