--- a/community.html
+++ b/community.html
@@ -37,6 +37,7 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="canonical" href="https://www.ofidcrypt.com/community.html">
 
 	<!-- Specific PNG sizes for modern browsers -->
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
