--- a/pages/about.html
+++ b/pages/about.html
@@ -38,6 +38,7 @@
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
+		<link rel="canonical" href="https://www.ofidcrypt.com/pages/about.html">
 		
 		<!-- Specific PNG sizes for modern browsers -->
 		<link rel="icon" type="image/png" sizes="512x512" href="../favicon.png">
