Started to fix X publish adaptation from iframe blocked.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -113,12 +113,24 @@
 		<!-- Main -->
 		<div id="main">
 		
-			<!-- Section Title -->
+			<!-- iFrame Original
 			<section class="livestream">
 				<div class="video main">
 					<img src="../assets/images/kincontest01.gif" alt="Livestream Placeholder" class="placeholder">
-					<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src="https://twitter.com/i/broadcasts/1OdKrXNzEWqJX"></iframe>
+					<iframe id="xstream" width="100%" frameborder="0" allowfullscreen src=""></iframe>
 				</div>
+			-->
+
+			<!-- X Publish Adaptation  -->
+			<section class="livestream">
+				<div class="video main">
+					<blockquote class="twitter-tweet video main"  data-media-max-width="1920">
+						<p lang="en" dir="ltr"><a href="https://t.co/x243uX0ZIV"></a></p>
+						<p><a href="https://twitter.com/OFiDCrypt/status/1857192873197715888?ref_src=twsrc%5Etfw"></a></p>
+					</blockquote>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>
+
 	
 				<!-- Revert video placeholder to poster image after video ends -->
 				<script>
