Text and nav adjustments.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -85,7 +85,7 @@
 				<li><a href="../index.html">Learn</a></li>
 				<li><a href="vipwithcode.html">VIP Area</a></li>
 				<li><a href="../community.html">Community</a></li>
-				<li class="active"><a href="livestream.html">𝕏 Livestream</a></li>
+				<li class="active"><a href="livestream.html">Livestream</a></li>
 				<li><a href="affiliate.html">Affiliate</a></li>
 				<li><a href="about.html">About Us</a></li>
 			</ul>
@@ -153,7 +153,7 @@
 				<header>
 					<h2>𝕏 Livestream: Welcome</h2>
 					<!-- Section Description -->
-					<p class="align-center">⚠️ <b>Not Live:</b> Currently in Development ⚠️</p>
+					<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1OdKrXNzEWqJX">This is a Demo Stream</a> Live Contests Coming Soon ℹ️</p>
 					<p class="align-center">All date and time formats are YYYY-MMM-DD and are in the Pacific Time Zone (PST), which is UTC-8:00 (or UTC-7:00 during daylight saving time).</p>
 				</header>
 		
