--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -153,7 +153,8 @@
 				<header>
 					<h2>𝕏 Livestream: Welcome</h2>
 					<!-- Section Description -->
-					<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1OdKrXNzEWqJX">This is a Demo Stream</a> Live Contests Coming Soon ℹ️</p>
+	 			<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1OdKrXNzEWqJX">This is a Demo Stream</a> ℹ️</p>
+    <p class="align-center">Live Contests Coming Soon </p>
 					<p class="align-center">All date and time formats are YYYY-MMM-DD and are in the Pacific Time Zone (PST), which is UTC-8:00 (or UTC-7:00 during daylight saving time).</p>
 				</header>
 		
