Fixed video border styling on pages other than livestream.html. Added pplaceholder for event details.

--- a/community.html
+++ b/community.html
@@ -187,10 +187,8 @@
 				<header class="major">
 					<h2>Kin Monthly<br />
 						Updates</h2>
-					<p>Keep updated with the latest Kin news and developments.<br />
-						Updates written and published by <a href="https://tipcard.getcode.com/x/KinShipsX">KinShip</a>,
-						admin of the <a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a> Telegram Channel
-						and <a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a> on 𝕏
+					<p>Keep updated with the latest Kin news and developments, 
+						written and published by <a href="https://tipcard.getcode.com/x/KinShipsX">KinShip</a> of the Kin Community.
 					</p>
 				</header>
 				<div id="community-featured-image" class="image main">
