Updated page thumbnail pictures webp format.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		  "@context": "https://schema.org",
 		  "@type": "Organization",
 		  "name": "OFiDCrypt",
-		  "url": "https://ofidcrypt.com",
-		  "logo": "https://ofidcrypt.com/assets/images/logo01.png",
+		  "url": "https://www.ofidcrypt.com",
+		  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
 		  "sameAs": [
 		  "https://x.com/OFiDCrypt",
 		  "https://www.facebook.com/OFiDCrypt",
@@ -39,16 +39,16 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="Join the Crypto Community | OFiDCrypt">
 		<meta property="og:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
-		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta property="og:url" content="https://ofidcrypt.com">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta property="og:url" content="https://www.ofidcrypt.com">
 		<meta property="og:type" content="website">
 	
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Join the Crypto Community | OFiDCrypt">
 		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
-		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta name="twitter:url" content="https://ofidcrypt.com">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com">
 		
         <!-- Partner Verification Meta Tags -->
 		<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d" />
