--- a/pages/about.html
+++ b/pages/about.html
@@ -25,16 +25,16 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta property="og:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta property="og:url" content="https://ofidcrypt.com/pages/about.html">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta property="og:url" content="https://www.ofidcrypt.com/pages/about.html">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta name="twitter:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta name="twitter:url" content="https://ofidcrypt.com/pages/about.html">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about.html">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
