--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -25,16 +25,16 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="VIP Lounge with Code Wallet | OFiDCrypt">
 		<meta property="og:description" content="Explore a whole new level of access, interaction and crypto sharing between you, your friends and the internet. You can log in to this exclusive area with the Code Wallet App!">
-		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bgcode01.png">
-		<meta property="og:url" content="https://ofidcrypt.com/pages/vipwithcode.html">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bgcode01.png">
+		<meta property="og:url" content="https://www.ofidcrypt.com/pages/vipwithcode.html">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="VIP Lounge with Code Wallet | OFiDCrypt">
 		<meta name="twitter:description" content="Explore a whole new level of access, interaction and crypto sharing between you, your friends and the internet. You can log in to this exclusive area with the Code Wallet App!">
-		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bgcode01.png">
-		<meta name="twitter:url" content="https://ofidcrypt.com/pages/vipwithcode.html">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bgcode01.png">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/vipwithcode.html">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
