--- a/community.html
+++ b/community.html
@@ -24,16 +24,16 @@
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Our Community Connections | OFiDCrypt">
 	<meta property="og:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
-	<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-	<meta property="og:url" content="https://ofidcrypt.com/community.html">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
+	<meta property="og:url" content="https://www.ofidcrypt.com/community.html">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Our Community Connections | OFiDCrypt">
 	<meta name="twitter:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
-	<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-	<meta name="twitter:url" content="https://ofidcrypt.com/community.html">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/community.html">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
