--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -25,16 +25,16 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta property="og:description" content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
-		<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta property="og:url" content="https://ofidcrypt.com/pages/affiliate.html">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-partners-lowres.webp">
+		<meta property="og:url" content="https://www.ofidcrypt.com/pages/affiliate.html">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta name="twitter:description" content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
-		<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-		<meta name="twitter:url" content="https://ofidcrypt.com/pages/affiliate.html">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-partners-lowres.webp">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/affiliate.html">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
