--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -26,16 +26,16 @@
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Livestream Crypto Contests | OFiDCrypt">
 	<meta property="og:description" content="Participate in OFiDCrypt live contests to win real assets! Our mission: Provide opportunities to get you crypto for your Code Wallet quickly and easily!">
-	<meta property="og:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-	<meta property="og:url" content="https://ofidcrypt.com/pages/livestream.html">
+	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-contests-lowres.webp">
+	<meta property="og:url" content="https://www.ofidcrypt.com/pages/livestream.html">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Livestream Crypto Contests | OFiDCrypt">
 	<meta name="twitter:description" content="Participate in OFiDCrypt live contests to win real assets! Our mission: Provide opportunities to get you crypto for your Code Wallet quickly and easily!">
-	<meta name="twitter:image" content="https://ofidcrypt.com/assets/images/bglogo02-lowres.png">
-	<meta name="twitter:url" content="https://ofidcrypt.com/pages/livestream.html">
+	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-contests-lowres.webp">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/livestream.html">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="../favicon.ico">
