Adjusted stream size and auto fit settings.

--- a/community.html
+++ b/community.html
@@ -84,7 +84,7 @@
 				<li><a href="pages/vipwithcode.html">VIP Area</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">Livestream</a></li>
-				<li><a href="pages/affiliate.html">Affiliate</a></li>
+				<li><a href="pages/affiliate.html">Partners</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
