--- a/pages/about.html
+++ b/pages/about.html
@@ -85,7 +85,7 @@
 							<li><a href="vipwithcode.html">VIP Area</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Livestream</a></li>
-							<li><a href="affiliate.html">Affiliate</a></li>
+							<li><a href="affiliate.html">Partners</a></li>
 							<li class="active"><a href="about.html">About Us</a></li>
 						</ul>
 						<ul class="icons">
