Started affioliate page with Hvr and some livestram page linking internal.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -115,23 +115,22 @@
                     <span class="date">Building Connections</span>
                     <h1>Affiliate<br /> 
 						Partners</h1>
-                    <p>We work with only the best, to ensure a seamless experience for our users as they embark upon their crypto journey.</p>
                 </header>
 
                 <!-- Affiliate Partners Section -->
                 <section class="partner-section">
                     <header>
                         <!-- Partner Name -->
-                        <h2>Partner Name Here</h2>
-                        <p>This section will introduce the partner and highlight the educational and interactive benefits to OFiDCrypt members.</p>
+                        <h2>Hvr</h2>
+                        <p>Hvr immediately belew us away with its concept: Comment on, share and tag people in any page on the internet! It opens endless opportunities of discussion.</p>
                     </header>
 
                     <!-- Product 1 -->
                     <article class="product-section">
                         <div class="product-wrapper">
                             <div class="product-content">
-                                <span class="image left"><img src="../assets/images/logokin01.jpg" alt="Kin On Solana Logo Image"></span>
-                                <h3 style="text-align: left;">Product Name Here</h3>
+                                <span class="image left"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
+                                <h3 style="text-align: left;">Hvr App | Where Sites Are Social</h3>
                                 <p>"Harnessing affiliate power, businesses can tap into diverse audiences through trusted partners. These partners promote products organically, sharing through blogs, social media, and videos, offering genuine insights. This authenticity builds consumer trust, leading to increased engagement and sales. Affiliates, often experts in their niche, educate their followers, simplifying the choice to purchase. This collaboration not only boosts brand visibility but also aligns with modern consumer behavior, valuing peer recommendations. Through strategic partnerships, affiliates help brands grow, providing personalized marketing at a fraction of traditional advertising costs, effectively turning followers into customers with every shared link or review."</p>
                             </div>
                         </div>
@@ -151,8 +150,9 @@
                     <!-- More About Our Partners -->
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
-							<p style="text-align: center;">OFiDCrypt transcends the traditional affiliate model; we also cultivate deep, collaborative relationships with our
-							<a href="../community.html">Community Connections</a>.</p>
+							<p style="text-align: center;">OFiDCrypt works with only the best, to ensure a seamless experience for our users as they embark upon their crypto journey. 
+							We transcend the traditional affiliate model by cultivating other deep, collaborative relationships with our
+							<a href="../community.html">Community Connections</a></p>
 						</footer>
                     </footer>
                 </section>
