--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -176,8 +176,8 @@
 									</tr>
 								</thead>
 							<tbody>
-								<tr>
-									<td>ID: PDA-001 <br><b>Perk Digital Art</b></td>
+								<tr id="table-next-event"> 
+									<td>ID: PDA-001 <br><b><a href="#next-featured-event">Perk Digital Art</a></b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Live Draw: <br><a href="#">2024-TBA at 00:00</a></td>
@@ -208,7 +208,7 @@
 					</header>
 				</section>
 
-					<article class="post featured event-post">
+					<article class="post featured event-post" id="next-featured-event">
 						<header class="major">
 							<section id="posts-container">
 								<div id="index-posts">
@@ -216,7 +216,7 @@
 										<article>
 											<header>
 												<span class="date">PDA-001 Perk Digital Art</span>
-												<h2><a href="#">Perk<br />
+												<h2><a href="#table-next-event">Perk<br />
 														Digital Art</a></h2>
 											</header>
 											<a href="#" class="image fit"><img src="../assets/images/picgif01.gif"
@@ -229,7 +229,7 @@
 												promises more entries, more
 												winners, and bigger cash prizes!</p>
 											<ul class="actions special">
-												<li><a href="#" class="button">Claim Entry</a></li>
+												<li><a href="https://perk.exchange" class="button">Claim Entry</a></li>
 											</ul>
 										</article>
 									</section>
