Add links to intro and add word for clarity.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<meta name="twitter:url" content="https://www.ofidcrypt.com">
 		
         <!-- Partner Verification Meta Tags -->
-		<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d" />
+		<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d">
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -90,12 +90,17 @@
 					</h1>
 				
 					<div class="images-with-plus">
-						<img src="/assets/images/logokin02.jpg" alt="Kin Logo">
+						<a href="/community.html" class="no-style-link">
+							<img src="/assets/images/logokin02.jpg" alt="Kin Logo & Link to Community">
+						</a>						
 						<span class="plus-sign">+</span>
-						<img src="/assets/images/logocode01.jpg" alt="Code Inc. Logo">
+						<a href="/pages/vipwithcode.html" class="no-style-link">
+							<img src="/assets/images/logocode01.jpg" alt="Code Inc. Logo & Link to VIP">
+						</a>
 					</div>
 					<div>
-						<h1 class="left-aligned">Your Portfolio.</h1>
+						<h1 class="left-aligned">Your Portfolio<br />
+							<span class="smaller-heading-bottom">Simplified</span></h1>
 					</div>
 				
 					<div id="custom-subheading">
