Added link to home from logo on all other pages with proper relative paths.

--- a/pages/about.html
+++ b/pages/about.html
@@ -68,10 +68,12 @@
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
-				<!-- Header Subpage-->
-				<header class="header-subpage">
-					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
-				</header>
+		<!-- Header Subpage-->
+		<header class="header-subpage">
+			<a href="../index.html">
+				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+			</a>
+		</header>
 
 					<!-- Your Dark Mode Toggle Button -->
 					<a href="#darkModePanel" id="darkModeToggle" class="alt">
