--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -71,7 +71,9 @@
 
 		<!-- Header Subpage-->
 		<header class="header-subpage">
-			<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+			<a href="../index.html">
+				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+			</a>
 		</header>
 
 		<!-- Your Dark Mode Toggle Button -->
