--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -70,13 +70,15 @@
 
 				<!-- Header Subpage-->
 				<header class="header-subpage">
-					<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+					<a href="../index.html">
+						<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+					</a>
 				</header>
 
-					<!-- Your Dark Mode Toggle Button -->
-					<a href="#darkModePanel" id="darkModeToggle" class="alt">
-						<i class="fas fa-sun"></i>
-					</a>
+				<!-- Your Dark Mode Toggle Button -->
+				<a href="#darkModePanel" id="darkModeToggle" class="alt">
+					<i class="fas fa-sun"></i>
+				</a>
 
 				<!-- Nav -->
 					<nav id="nav">
