Fixed logo display on m obile with URL link to index.html. Updated favicon config for other pages and new logo.

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		<link rel="canonical" href="https://www.ofidcrypt.com">
 		
 		<!-- Specific PNG sizes for modern browsers -->
 		<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+
+		<!-- Canonical Preferred URL -->
+		<link rel="canonical" href="https://www.ofidcrypt.com">
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/main.css" onload="this.media='all'">
