--- a/community.html
+++ b/community.html
@@ -37,14 +37,12 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="canonical" href="https://www.ofidcrypt.com/community.html">
 
 	<!-- Specific PNG sizes for modern browsers -->
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="icon" type="image/png" sizes="24x24" href="/favicon-24x24.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
-	<link rel="icon" type="image/png" sizes="512x512" href="/favicon.png">
+	<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+
+	<!-- Canonical Preferred URL -->
+	<link rel="canonical" href="https://www.ofidcrypt.com/community.html">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/assets/css/main.css">
