--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
 					</div>
 				
 					<div id="custom-subheading">
-						<p>Join the Conversation on 𝕏</p>
-						<h2 class="exclude-from-style"><a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a></h2>
+						<a href="https://twitter.com/OFiDCrypt?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large"
+							data-show-count="false">Follow @OFiDCrypt</a>
+						<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</div>
 						
 						<!--<p>Site template by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>-->
