Fixed spelling errors and header logo border hide, plus pagination numbers margin on mobile adjusted.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -122,7 +122,9 @@
                     <header>
                         <!-- Partner Name -->
                         <h2>Hvr</h2>
-                        <p>Hvr immediately belew us away with its concept: Comment on, share and tag people in any page on the internet! It opens endless opportunities of discussion.</p>
+						<p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page across the
+							internet! This innovation unleashes boundless opportunities for discussion all over the web, enabling you to form
+							new connections and share your thoughts seamlessly as you browse.</p>
                     </header>
 
                     <!-- Product 1 -->
