--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 				<div id="intro">
 					<h1 class="left-aligned">
 						<span class="smaller-heading">Start with</span><br />
-						One Wallet<br />
-						One Crypto
+						One Crypto<br />
+						One Wallet
 					</h1>
 				
 					<div class="images-with-plus">
