Added landing section to index.html and main padding adjustments for desktop.

--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
 						</ul>
 					</nav>
 
+<!-- Main -->
+<div id="main">
+	<!-- Featured Post -->
+	<article class="post featured">
+		<header class="major">
+			<span class="date">Welcome</span>
+			<h2>Get <br />Started</h2>
+			<p>Mission statement here.
+			</p>
+		</header>
+	</article>
+</div>
 				<!-- Main -->
 				<div id="main">
 					<!-- Featured Post -->
