Livestream test update tweet embed URL.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -125,9 +125,10 @@
 			<!-- X Publish Adaptation  -->
 			<section class="livestream">
 				<div class="stream video main">
-					<blockquote class="twitter-tweet video main"  data-media-max-width="1920">
-						<p lang="en" dir="ltr"><a href="https://t.co/x243uX0ZIV"></a></p>
-						<p><a href="https://twitter.com/OFiDCrypt/status/1857192873197715888?ref_src=twsrc%5Etfw"></a></p>
+					<blockquote class="twitter-tweet" data-media-max-width="1920">
+						<p lang="en" dir="ltr">Sorry about unrelated content! It&#39;s a test required for an upcoming promo! <a
+								href="https://t.co/6SoUOzblUy">https://t.co/6SoUOzblUy</a></p>&mdash; Tokin ⬢ (@OFiDCrypt) <a
+							href="https://twitter.com/OFiDCrypt/status/1858414560417570913?ref_src=twsrc%5Etfw">November 18, 2024</a>
 					</blockquote>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
