Formatting adjustments and content continuity and links improved.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -82,7 +82,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Learn</a></li>
-							<li><a href="vipwithcode.html">VIP Area</a></li>
+							<li><a href="vipwithcode.html">VIP Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Livestream</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
