--- a/community.html
+++ b/community.html
@@ -81,7 +81,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Learn</a></li>
-				<li><a href="pages/vipwithcode.html">VIP Area</a></li>
+				<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">Livestream</a></li>
 				<li><a href="pages/affiliate.html">Partners</a></li>
