Fix spelling and adjusted table label for mobile.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -132,7 +132,7 @@
 									</video>
 								</div>
 
-								<p class="align-center"><b>You can interact and make purchases with Kin in just a tap</b> or send snd receive it to and from your
+								<p class="align-center"><b>You can interact and make purchases with Kin in just a tap</b> or send and receive it to and from your
 									friends! For example, people are already using Code Wallet with the Pennypost website, the home of <a href="../index.html#pagination-controls-top">OFiDCrypt
 									Articles</a>. Follow the link and see how it works for only $0.25 USD of Kin.</p>
 							</header>
