Added content to home page index.html and fixed formatting issue on community.html.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -247,7 +247,7 @@
 				<section class="event headings">
 					<header class="major">
 						<h2 id="about-contests">About Contests</h2>
-						<p class="align-center">Visit the link below to visit out <b>𝕏 Livestream Kin Contests</b> landing page, hosted by Hvr.</p>
+						<p class="align-center">Click the link below to visit our <b>𝕏 Livestream Kin Contests</b> landing page, hosted by Hvr.</p>
 						<p class="align-center"><a href="https://www.ofidcrypt.ca/livestream-kin-contests-ugomxjp">Learn more</a></p>
 						<p class="align-center">You can see the beta documentation for the contest structure <a
 								href="https://github.com/OFiDCrypt/kin-perk-sweeps/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>
