Adjusted some mobile media settings to 980px from 768px.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<span class="date">OFiDCrypt Services</span>
 							<h1>Our <br />Mission</h1>
 							<p>We offer educational content and interactive events to earn crypto. We write articles
-								for beginners, available through a partner apps and featured services, and curate and host livestreams for community
+								for beginners, available through partner apps and featured services, and curate and host livestreams for community
 								engagement.
 							</p>
 						</header>
