--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<link rel="canonical" href="https://www.ofidcrypt.com">
 
 		<!-- Stylesheets -->
-		<link rel="stylesheet" href="/assets/css/main.css" onload="this.media='all'">
+		<link rel="stylesheet" href="/assets/css/main.css">
 		<noscript>
 			<link rel="stylesheet" href="/assets/css/noscript.css">
 		</noscript>
