Removed prevention of user scroll on Android to attemt to fix navPanel scroll, and reverted previous changes.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Meta Description (for SEO) -->
 		<title>Join the Crypto Community | OFiDCrypt</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
