Reverted changes to navPanel overflow test and meta viewport reverted, issue not identified.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- Meta Description (for SEO) -->
 		<title>Join the Crypto Community | OFiDCrypt</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
 		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
@@ -133,12 +133,6 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Learn</a></li>
-							<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
-							<li><a href="/community.html">Community</a></li>
-							<li><a href="pages/livestream.html">Livestream</a></li>
-							<li><a href="pages/affiliate.html">Partners</a></li>
-							<li><a href="pages/about.html">About Us</a></li>
-
 							<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 							<li><a href="/community.html">Community</a></li>
 							<li><a href="pages/livestream.html">Livestream</a></li>
